# Miyori

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONFIG.md  FEATURE_Fact_Management.md  FEATURE_TextInput.md  FEATURE_architecture_documentation_refactor.md  FEATURE_constant_listening.md  FEATURE_fileops_refactor.md  FEATURE_llm_refactor_plan.md  FEATURE_memory.md  IMPLEMENTATION_memory.md  MVRA_CORE.md  Miyori.bat  README.md  TODO.md  TODO_agentic_polishing.md  config.json  config.json.example  main.py  maintenance.sh  memory.db  pyproject.toml  requirements.txt  run_consolidation.bat  system_instructions.txt  verify_tools.py
keyword/: keyword.ppn
skills/Agentic_Planning/: SKILL.md
skills/Core_Logic/: SKILL.md
skills/How_to_be_an_Agent/: SKILL.md
skills/Memory_System/: SKILL.md
skills/Tooling_Terminal/: SKILL.md
skills/Voice_Speech/: SKILL.md
skills/Web_Search/: SKILL.md
src/: main.py
src/core/: ASSISTANT_PLAN.md  assistant.py  miyori.py
src/interfaces/: llm_backend.py  memory.py  speech_input.py  speech_output.py
src/memory/: ARCH_memory.md  async_memory_stream.py  budget.py  consolidation.py  context.py  deep_layers.py  episodic.py  gates.py  memory_retriever.py  scoring.py  sqlite_store.py  summarizer.py
src/miyori/: __init__.py  main.py
src/tools/: file_ops.py  memory_search.py  web_search.py
src/utils/: embeddings.py  logger.py  memory_logger.py  run_consolidation.py
tests/: test_agentic_loop.py  test_core_llm.py  test_integrated_tools.py  test_llm.py  test_llm_memory.py  test_speech.py  test_tool_calling.py  test_tts.py  verify_memory.py
(+31 files in other folders)
