[project]
name = "miyori"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SimonPurdie", email = "hoopmonkey@gmail.com" }
]
requires-python = ">=3.11, <3.13"
dependencies = [
    "ddgs>=9.10.0",
    "google-genai>=1.56.0",
    "kokoro>=0.9.4",
    "numpy>=2.4.0",
    "pvcobra==2.1.0",
    "pvporcupine>=4.0.1",
    "pyaudio>=0.2.14",
    "sounddevice>=0.5.3",
    "vosk>=0.3.45",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
